# matching-tool-rs

./: .gitignore  Cargo.toml  README.md
src/: args.rs  cmd.rs  elastic.rs  main.rs  matcher.rs  overlap.rs  report.rs  source_data.rs  tokenizer.rs  vectorize.rs  vocab.rs  year_grammar.pest  zipfile.rs
src/output/: csv.rs  json.rs  mod.rs  text.rs  xlsx.rs
